--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,6 @@
 {
     "name": "navin/cmsimportexport",
     "description": "CMS Import Export Module For Magento-2",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],	
     "type": "magento2-module",
     "authors": [
         {
@@ -12,6 +8,15 @@
             "name": "Navin Bhudiya"
         }
     ],
+    "version": "1.0.0",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
+  "require": {
+    "php": "~7.1.3|~7.2.0",
+    "magento/framework": "~100.0.4"
+  },
     "autoload": {
         "psr-4": {
             "Navin\\CmsImportExport\\": ""
